--- a/indexHTML.html
+++ b/indexHTML.html
@@ -13,7 +13,60 @@
         <li>CSS</li>
         <li>JS</li>
     </ol>
+
+    <dl>
+        <dt>HTML:</dt>
+        <dd>Hyper Text Markup Language</dd>
+        <dt>CSS:-</dt>
+        <dd>Cascading Style Sheets</dd>
+        <dt>JS:-</dt>
+        <dd>Java Script</dd>
+    </dl>
+        <ul><li>JAVA</li>
+    <li>PYTHON</li>
+    <li>DOTNET</li></ul>
+    <ul>Java Topics:
+        <ol><li>OOPS</li>
+        <li>Exception Handling</li>
+    <li>Collections</li></ol>
+    </ul>
     </p>
-    
+    <table border= "2">
+        <tr><th>Sno</th>
+        <th>Sub Name</th>
+        <th>Marks</th></tr>
+        <tr><td>1</td>
+        <td>Tel</td>
+        <td>60</td></tr>
+        <tr><td>2</td>
+        <td>Hin</td>
+        <td>80</td></tr>
+        <tr><td>3</td>
+        <td>Eng</td>
+        <td>70</td></tr>
+        <td columnspan="3">Total Marks</td>
+                <td rowspan = "3">210</td>
+    </table>
+    <audio controls autoplay muted>
+        <source src="C:\Users\yogis\Downloads\ghostscream.mp3">
+    </audio><br>
+    <video controls autoplay muted loop height="200">
+        <source src="C:\Users\yogis\Downloads\motionpic.mp4">
+    </video>
+    <picture>
+        <img src="C:\Users\yogis\Downloads\ben10.webp" height="200" alt="Ben10">
+
+    </picture>
+    <picture>
+                <img src="C:\Users\yogis\Downloads\Shinchan.jpg" height="200" alt="Shinchan">
+                        <img src="C:\Users\yogis\Downloads\Doraemon-PNG-File.png" height="200" alt="Doremooon">
+
+
+    </picture>
+    <label for="na">Enter Name:</label>
+        <input type="text" placeholder="Enter your name" id="na" name="nam"><br>
+        <lable for="num">Enter Ph Num:</lable>
+        <input type="number" placeholder="Enter Ur Ph Number" id="num">
+
 </body>
 </html>
